=========
Changelog
=========

Version 4.1.0

- Updates for renamed Atlas 1.10.4 addons. (Telchar)
- EquipCompare support removed.
- Comparison Tooltips added. This is optional and toggled off by default. Thanks to Daviesh & AtlasLoot for the code!
- Server AutoQuery added. AtlasQuest will query the server for rewards when quest data is shown. This is optional and toggled off by default. Re-used code from Daviesh & AtlasLoot.
- Option added to turn off Server Query spam (suggested by Telchar).
- German localization updated by Telchar.
- German translation of Burning Crusade quests from Nalumis.
- Added all Dungeon Daily quests.
- Simplified Chinese localization updated by yeachan.

- Fixes:
	- Quest names were not being colored blue when CT Mod's Show Quest Level option was on. Big thanks to Denival for the fix!
	- Parentheses in quest names (such as class quests) would break AtlasQuest's blue quest title option. Thanks again to Denival for the fix!
	- Removed Bayi's Extended Questlog fix for quest names since his addon now fixes it.
	- Incorrectly had "Wanted: Shattered Hand Centurions" marked as a Heroic quest.
	- Coordinates of quest giver for Horde quest "Shadowshard Fragments" were wrong.
	- Other miscellanous typos. Thanks to Telchar for finding some I missed.
	- Added name of followup quest for Molten Core: Hands of the Enemy (Thanks Celellach)

- Quests added:
	- Stratholme: The Balance of Light and Shadow (Priest)   (Thanks Celellach)
	- SM Graveyard: Call the Headless Horseman (Daily - Seasonal)   (Thanks Celellach)
	- Underbog: Bring Me A Shrubbery!
	- Underbog: Wanted: A Black Stalker Egg (Heroic Daily)
	- Slave Pens: Wanted: The Heart of Quagmirran (Heroic Daily)
	- Steamvault: Wanted: Coilfang Myrmidons (Daily)
	- Steamvault: Wanted: The Warlord's Treatise (Heroic Daily)
	- Auch Crypts: Wanted: The Exarch's Soul Gem (Heroic Daily)
	- Mana Tombs: Wanted: Shaffar's Wondrous Pendant (Heroic Daily)